# eo-learning

./: .gitignore  setup.cfg
conf/data/: build_xls.yaml  building.yaml  finetuning_water_debug.yaml  lucc.yaml  pastis.yaml  pastis_ser.yaml  pastis_xls.yaml  simmim_pretrain.yaml  water.yaml
conf/model/mae/: fine_tuning.yaml  pretrain.yaml
conf/model/simmim/: finetuning_swinb.yaml  finetuning_swinv2l.yaml  pretrain.yaml  pretrain_swinb.yaml  pretrain_swinv2l.yaml
conf/model/swin_uper/: debug.yaml
conf/model/tsvit/: debug.yaml  tsvit.yaml
conf/trainer/: classification.yaml  debug.yaml  simmim.yaml  train.yaml
experiment/: build.yaml  building.yaml  finetuning_swinv2l_water_debug.yaml  mae_finetuning.yaml  mae_pretrain.yaml  simmim_finetuning.yaml  simmim_swinb.yaml  simmim_swinv2l.yaml  tsvit.yaml  tsvit_debug.yaml  water.yaml
experiment/debug/: tsvit_debug.yaml
experiment/debug/simmim/: data.yaml  main.yaml  model.yaml  trainer.yaml
src/geosprite/learning/cli/: bs_finder.py  lr_finder.py  trainer.py
src/geosprite/learning/lightning_datamodule/: __init__.py  base_dataloader.py
src/geosprite/learning/lightning_datamodule/lucc/: datamodule.py  dataset.py  test.py  (+1 more)
src/geosprite/learning/lightning_module/: __init__.py  base_module.py  classification_module.py  mae_finetuning_module.py  mae_pretrain_module.py  metrics.py  simmim_finetuning_module.py  simmim_pretrain_module.py
src/geosprite/learning/lr_scheduler/: __init__.py  cosine_anealing_warmup.py
src/geosprite/learning/model/: info.py
src/geosprite/learning/util/: sen2sample_oo.py  utils.py
(+32 files in other folders)
