[metadata]
name = geosprite-learning
version = 2.0
author = Jia Song
author_email = geosprite2020@gmail.com

[options]
python_requires = ==3.10.*
install_requires =
    rasterio ~= 1.3
    geopandas ~= 0.12
    pytorch-lightning == 2.0
    torch == 2.0
    torchvision ~= 0.15
    timm ~= 0.6
    segmentation-models-pytorch ~= 0.3
    jsonargparse[signatures] ~= 4.17
    torchinfo ~= 1.7
    torchmetrics ~= 0.11
    einops ~= 0.6
    wandb ~= 0.14
    rich ~= 13.3
    pytest ~= 7.3
    seaborn ~= 0.12
    transformers
zip_safe = False

package_dir = =src
packages = find_namespace:

[options.entry_points]
console_scripts =
    trainer = geosprite.learning.cli.trainer:main
[options.packages.find]
where = src
